--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- 💡 Свернуть все блоки кода: Ctrl + K;  Ctrl + 0 -->
 
         <!-- Пример с выбором элементов. Селекторы. CSS классы -->
-		<div class="dom-example">
+		<div class="dom-example none" >
 			<h1 class="heading-1" id="heading-1">Заголовок 1</h1>
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae blanditiis eaque, at, eos ipsam
@@ -76,7 +76,7 @@
 		</div>
 
         <!-- Создание элементов -->
-        <div class="dom-example none">
+        <div class="dom-example node">
             <h2>Создание и копирование элементов</h2>
             <div id="elementsContainer"></div>
         </div>
